# etz

./: Cargo.toml  INSTALLATION.md  LICENSE  README.md
.github/workflows/: release.yml
scripts/: render-homebrew-formula.sh
src/: cli.rs  discovery.rs  errors.rs  git.rs  lib.rs  main.rs  model.rs  ops.rs  storage.rs
tests/: integration.rs
