[package]
name = "etz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
globset = "0.4.16"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.17.1"
