[package]
name = "etz"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for coordinating git worktrees across multi-repo parent directories."
readme = "README.md"
repository = "https://github.com/snipeship/etz"
homepage = "https://github.com/snipeship/etz"
documentation = "https://docs.rs/etz"
license = "MIT"
keywords = ["git", "cli", "worktree", "workspace", "monorepo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
globset = "0.4.16"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.17.1"
